<resources>
    <string name="app_name">Goal Getter</string>
    <string name="content_authority">com.seantholcomb.goalgetter</string>

    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Add Goal</string>
    <string name="title_section3">Focus Timer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu Strings-->

    <string name="action_settings">Settings</string>
    <string name="about_focus">About Focus Timer</string>
    <string name="about_detial">About Goal Detail</string>
    <string name="edit">Edit Goal</string>
    <string name="action_delete">Delete Goal</string>

    <!--Dashboard Strings-->
    <string name="todo_label">TODO Today</string>
    <string name="current_label">Current Goals</string>
    <string name="past_label">Past Goals</string>

    <!--Detail Strings -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_calendar">Add to Calendar</string>
    <string name="milestones">Milestones</string>
    <string name="add_milestone">Add Milestone</string>
    <string name="percent_sign">\u0025</string>
    <string name="by">by </string>
    <string name="how">To do this I will:</string>
    <string name="a_week"> days a week</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="freq_toast">Must be whole number from 0 to 7</string>
    <string name="task_prompt">What do you need to do?</string>
    <string name="new_milestone">New Milestone</string>
    <string name="milestone_toast">Please set goal title and due date</string>
    <string name="title_prompt">New Goal</string>
    <string name="date_prompt">Please select a later date</string>
    <string name="adapter_date_prompt">Please select an earlier date</string>
    <string name="concurrent">Start Milestone Now</string>

    <!--Focus Timer Strings -->
    <string name="time_for">Time For</string>
    <string name="minutes">Minutes</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="you_lasted">You Lasted:</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="zero">0</string>
    <string name="zero_timer">0:00:00</string>
    <string name="timer_toast">Try to pick a shorter time</string>
    <string name="minutes_toast">Please enter a number of minutes</string>
    <string name="start_toast">Timer Started, Stay Focused</string>
    
    <!--Notification Strings-->
    <string name="congratulations">Congratulations!</string>
    <string name="completed"> is completed</string>
    <string name="task_due">Task Due Today</string>

    <!--Widget Strings-->
    <string name="widget_title">Todo Widget</string>

    <!--Admob Strings-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--about Strings-->
    <string name="ok">Got It</string>

    <!--Preference Strings-->
    <string name="pref_noti_key">notification_key</string>
    <string name="pref_noti_title">Turn On Notifications</string>

    <!--Content Descriptions-->
    <string name="cont_desc_toolbar">Toolbar to control navigation and app actions</string>
    <string name="cont_desc_minuteInput">Set the number of minutes you would like to focus, between 0 and 90</string>
    <string name="cont_desc_restartButton">cancel and restart the timer</string>
    <string name="cont_desc_stopButton">stop the timer if you lose focus or stop alarm</string>
    <string name="cont_desc_minuteOutput">displays timer after stop button is pressed or after timer finishes</string>
    <string name="cont_desc_alarmSelector">Choose the alarm you would like to play when you the timer finishes</string>
    <string name="cont_desc_save">Save changes to goal</string>
    <string name="cont_desc_cancel">Undo changes and turn off edit mode</string>
    <string name="cont_desc_title">Set the title of your goal</string>
    <string name="cont_desc_dateSetter">Pick the date you would like to finish on</string>
    <string name="cont_desc_calendarBox">Check box if you would like goal and milestone to show up on your google calendar</string>
    <string name="cont_desc_addMilestone">add an additional milestone to your goal</string>
    <string name="cont_desc_graphs">Progress on your goals and milestones</string>
    <string name="cont_desc_milestones">Details on each milestone for the goal</string>
    <string name="cont_desc_todoView">Current tasks to complete</string>
    <string name="cont_desc_graphBar">the green bar represents completed tasks while the red bar represents missed tasks</string>
    <string name="cont_desc_todoBox">checkbox when you have completed this task</string>
    <string name="cont_desc_milestone_title">Set the title of this milestone</string>
    <string name="cont_desc_todoTask">Set the task needed to achieve your milestone</string>
    <string name="cont_desc_freq">Number of day you want to do the task per week</string>
    <string name="cont_desc_concurrent">Check if you would like to work towards a milestone at the same time as others in this goal</string>
    <string name="cont_desc_delete_milestone">remove this milestone from the goal</string>


</resources>
