<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/milestone_title"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_desc_milestone_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by"
        />
    <EditText
        android:id="@+id/milesstone_duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:contentDescription="@string/cont_desc_dateSetter"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how"/>
    <EditText
        android:id="@+id/todo_item"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_desc_todoTask"
         />
    <EditText
        android:id="@+id/frequency"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_desc_freq"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_week"/>
    <CheckBox
        android:text="@string/concurrent"
        android:id="@+id/concurrent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/cont_desc_concurrent"/>
    <Button
        android:id="@+id/delete_milestone"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_desc_delete_milestone"/>

</LinearLayout>