<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seantholcomb.goalgetter.DetailFragment">

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Goal title"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by"/>
    <EditText
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milestones"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_milestone"/>
    <ListView
        android:id="@+id/milestone_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ListView
        android:id="@+id/milestone_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>
